# Surg-SegFormer

./: README.md  pyproject.toml
configs/: anatomy.yaml  fused_infer.yaml  tools.yaml
scripts/: _cli.py  infer_fused.py  test_anatomy.py  test_tools.py  train_anatomy.py  train_tools.py
surg_segformer/: engine.py
surg_segformer/data/: __init__.py  endovis.py
surg_segformer/losses/: __init__.py  combined.py
surg_segformer/metrics/: __init__.py  dice.py  miou.py
surg_segformer/models/: __init__.py  anatomy.py  common.py  fusion.py  tools.py
surg_segformer/utils/: __init__.py  io.py
